--- a/MyAPI/MyAPI/appsettings.Development.json
+++ b/MyAPI/MyAPI/appsettings.Development.json
@@ -6,6 +6,7 @@
     }
   },
   "ConnectionStrings": {
+    "FarmStoreConnection": "Server=LIMAJLA;Database=FarmStore;Trusted_Connection=True;MultipleActiveResultSets=true",
     "IdentityConnection": "Server=LIMAJLA;Database=MyApiIdentity;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Token": {
