--- a/myclient/package.json
+++ b/myclient/package.json
@@ -10,6 +10,7 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/lab": "^5.0.0-alpha.127",
     "@mui/material": "^5.12.1",
+    "@mui/x-date-pickers": "^6.16.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@stripe/react-stripe-js": "^2.1.0",
     "@stripe/stripe-js": "^1.53.0",
@@ -22,6 +23,7 @@
     "@types/react-dom": "^18.0.11",
     "@types/react-slick": "^0.23.10",
     "axios": "^1.3.6",
+    "date-fns": "^2.30.0",
     "markdown-to-jsx": "^7.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
