API: BasketItems in Redis, updates for TokenAuth

--- a/MyAPI/MyAPI/appsettings.Development.json
+++ b/MyAPI/MyAPI/appsettings.Development.json
@@ -7,7 +7,8 @@
   },
   "ConnectionStrings": {
     "FarmStoreConnection": "Server=LIMAJLA;Database=FarmStore;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "IdentityConnection": "Server=LIMAJLA;Database=MyApiIdentity;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "IdentityConnection": "Server=LIMAJLA;Database=MyApiIdentity;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "Redis": "localhost"
   },
   "Token": {
     "Key": "This is super secret key $%^^*()!@#$ This is super secret key $%^^*()!@#$",
