Client: Basket module

--- a/MyAPI/MyAPI/appsettings.Development.json
+++ b/MyAPI/MyAPI/appsettings.Development.json
@@ -12,7 +12,7 @@
   },
   "Token": {
     "Key": "This is super secret key $%^^*()!@#$ This is super secret key $%^^*()!@#$",
-    "Issuer": "https://localhost:7164"
+    "Issuer": "http://localhost:7263/"
   },
-  "ApiUrl":  ""
+  "ApiUrl": "http://localhost:7263/Content"
 }
