API: Payment integ Stripe.net

--- a/MyAPI/MyAPI/appsettings.Development.json
+++ b/MyAPI/MyAPI/appsettings.Development.json
@@ -14,5 +14,10 @@
     "Key": "This is super secret key $%^^*()!@#$ This is super secret key $%^^*()!@#$",
     "Issuer": "http://localhost:7263/"
   },
+  "StripeSettings": {
+    "PublishableKey": "",
+    "SecretKey": "",
+    "WhSecret": ""
+  },
   "ApiUrl": "http://localhost:7263/Content"
 }
