Manage images storage & Cloudinary Integ

--- a/MyAPI/MyAPI/appsettings.Development.json
+++ b/MyAPI/MyAPI/appsettings.Development.json
@@ -19,5 +19,10 @@
     "SecretKey": "",
     "WhSecret": ""
   },
-  "ApiUrl": "http://localhost:7263/Content"
+  "Cloudinary": {
+    "CloudName": "",
+    "ApiKey": "",
+    "ApiSecret": ""
+  },
+  "ApiUrlStaticImages": "http://localhost:7263/Content"
 }
