Homepages and Some UI modiofication

--- a/MyAPI/MyAPI/appsettings.Development.json
+++ b/MyAPI/MyAPI/appsettings.Development.json
@@ -20,9 +20,9 @@
     "WhSecret": ""
   },
   "Cloudinary": {
-    "CloudName": "",
-    "ApiKey": "",
-    "ApiSecret": ""
+    "CloudName": "dvbaicnsy",
+    "ApiKey": "351283415384499",
+    "ApiSecret": "h-q0mOihBzaYWwwGLoakWf52uRo"
   },
   "ApiUrlStaticImages": "http://localhost:7263/Content"
 }
