Security: Email Confirmation

--- a/MyAPI/MyAPI/appsettings.Development.json
+++ b/MyAPI/MyAPI/appsettings.Development.json
@@ -24,5 +24,13 @@
     "ApiKey": "351283415384499",
     "ApiSecret": "h-q0mOihBzaYWwwGLoakWf52uRo"
   },
-  "ApiUrlStaticImages": "http://localhost:7263/Content"
+  "ApiUrlStaticImages": "http://localhost:7263/Content",
+  "ClientUrl": "http://localhost:3000",
+  "SMTP": {
+    "Host": "",
+    "Port": "",
+    "User": "",
+    "Password": "",
+    "EnableSsl": true
+  }
 }
