--- a/MyAPI/Infrastructure/Infrastructure.csproj
+++ b/MyAPI/Infrastructure/Infrastructure.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="StackExchange.Redis" Version="2.6.122" />
     <PackageReference Include="Stripe.net" Version="43.1.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.32.1" />
+    <PackageReference Include="Twilio.AspNet.Core" Version="8.0.2" />
   </ItemGroup>
 
   <ItemGroup>
