--- a/MyAPI/MyAPI/appsettings.Development.json
+++ b/MyAPI/MyAPI/appsettings.Development.json
@@ -32,5 +32,10 @@
     "User": "",
     "Password": "",
     "EnableSsl": true
+  },
+  "TwilioSettings": {
+    "AccountSId": "AC4208fb9af96772c60ec26a0696b56a14",
+    "AuthToken": "13c7c43da38292996224103127e68e79",
+    "FromPhoneNumber": ""
   }
 }
