Disregard Mobile Authentication cause of some fees, Add LoginStatusId

--- a/MyAPI/MyAPI/appsettings.Development.json
+++ b/MyAPI/MyAPI/appsettings.Development.json
@@ -36,6 +36,6 @@
   "TwilioSettings": {
     "AccountSId": "AC4208fb9af96772c60ec26a0696b56a14",
     "AuthToken": "13c7c43da38292996224103127e68e79",
-    "FromPhoneNumber": ""
+    "FromPhoneNumber": "NO NUMBER, CAUSE NEED TO BUY AND SUBSCRIBE MONTHLY In TWILIO"
   }
 }
