LoginStatus and implem Singleton in config

--- a/MyAPI/MyAPI/appsettings.Development.json
+++ b/MyAPI/MyAPI/appsettings.Development.json
@@ -17,15 +17,14 @@
   "StripeSettings": {
     "PublishableKey": "",
     "SecretKey": "",
-    "WhSecret": ""
+    "WhSecret": "",
+    "Currency": "Php"
   },
   "Cloudinary": {
-    "CloudName": "dvbaicnsy",
-    "ApiKey": "351283415384499",
-    "ApiSecret": "h-q0mOihBzaYWwwGLoakWf52uRo"
+    "CloudName": "",
+    "ApiKey": "",
+    "ApiSecret": ""
   },
-  "ApiUrlStaticImages": "http://localhost:7263/Content",
-  "ClientUrl": "http://localhost:3000",
   "SMTP": {
     "Host": "",
     "Port": "",
@@ -37,5 +36,7 @@
     "AccountSId": "AC4208fb9af96772c60ec26a0696b56a14",
     "AuthToken": "13c7c43da38292996224103127e68e79",
     "FromPhoneNumber": "NO NUMBER, CAUSE NEED TO BUY AND SUBSCRIBE MONTHLY In TWILIO"
-  }
+  },
+  "ApiUrlStaticImages": "http://localhost:7263/Content",
+  "ClientUrl": "http://localhost:3000"
 }
