Inactivity popup, refreshToken Fix, MyProfile

--- a/MyAPI/MyAPI/appsettings.Development.json
+++ b/MyAPI/MyAPI/appsettings.Development.json
@@ -38,5 +38,7 @@
     "FromPhoneNumber": "NO NUMBER, CAUSE NEED TO BUY AND SUBSCRIBE MONTHLY In TWILIO"
   },
   "ApiUrlStaticImages": "http://localhost:7263/Content",
-  "ClientUrl": "http://localhost:3000"
+  "ClientUrl": "http://localhost:3000",
+  "RefreshTokenTimerMinutes": 3,
+  "IdleTimerMinutes": 1
 }
