--- a/MyAPI/Infrastructure/Infrastructure.csproj
+++ b/MyAPI/Infrastructure/Infrastructure.csproj
@@ -20,4 +20,14 @@
     <ProjectReference Include="..\Core\Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\SeedData\" />
+  </ItemGroup>
+
+	<ItemGroup>
+		<None Update="Data\SeedData\**\*.*">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+	</ItemGroup>
+
 </Project>
