--- a/MyAPI/MyAPI/Properties/launchSettings.json
+++ b/MyAPI/MyAPI/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:7263;http://localhost:5263",
+      "applicationUrl": "https://localhost:44386;http://localhost:7263;http://localhost:5263",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
