Add Hangfire jobs and other fix

--- a/MyAPI/Infrastructure/Infrastructure.csproj
+++ b/MyAPI/Infrastructure/Infrastructure.csproj
@@ -23,6 +23,7 @@
 
   <ItemGroup>
     <Folder Include="Data\SeedData\" />
+    <Folder Include="Identity\Migrations\" />
   </ItemGroup>
 
 	<ItemGroup>
