--- a/MyAPI/MyAPI/MyAPI.csproj
+++ b/MyAPI/MyAPI/MyAPI.csproj
@@ -9,6 +9,10 @@
 
   <ItemGroup>
 	<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+	<PackageReference Include="Hangfire" Version="1.8.7" />
+	<PackageReference Include="Hangfire.AspNetCore" Version="1.8.7" />
+	<PackageReference Include="Hangfire.Core" Version="1.8.7" />
+	<PackageReference Include="Hangfire.Redis.StackExchange" Version="1.8.7" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.21" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="6.0.21" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.21">
